[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvutils"
version = "0.1.6.1"
description = "Custom Utility Functions for Python"
authors = [{name = "vfm-sb", email = "vfm-sb@proton.me"}]
requires-python = ">=3.11.8"
dependencies = [
  "cerrlib==0.1.1",
  "iniconfig==2.0.0",
  "packaging==24.0",
  "pathvalidate==3.2.0",
  "pluggy==1.4.0",
  "pytest==8.1.1",
]
readme = "README.md"
license = {file = "LICENCE"}
keywords = ["pyvutils", "custom utilities", "helper functions"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.11",
  "Natural Language :: English"
]

[project.urls]
Repository = "https://github.com/vfm-sb/pyvutils"
Changelog = "https://github.com/vfm-sb/pyvutils/blob/main/HISTORY.md"